--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-polyfill": "^6.26.0",
     "es6-promise": "^4.2.2",
     "fastclick": "^1.0.6",
+    "html2canvas": "^1.0.0-rc.3",
     "mint-ui": "^2.2.13",
     "vue": "^2.5.2",
     "vue-dplayer": "^0.0.3",
