--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-dplayer": "^0.0.3",
     "vue-router": "^3.0.1",
     "vue-scroller": "^2.2.4",
+    "vue-uweb": "^0.2.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
