--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^3.0.1",
     "vue-scroller": "^2.2.4",
     "vue-uweb": "^0.2.1",
+    "vuedraggable": "^2.23.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
